objects/EDISC__c.object
<CustomObject>
    <fields>
        <fullName>Ccalculation__c</fullName>
        <formula>IF(TEXT(Q1O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q1O2__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q2O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q2O4__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q3O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q3O3__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q4O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q4O1__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q5O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q5O2__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q6O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q6O1__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q7O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q7O4__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q8O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q8O1__c) = &quot;Least&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>E-DISCs</relationshipLabel>
        <relationshipName>EDISCs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dcalculation__c</fullName>
        <formula>IF(TEXT(Q1O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q1O1__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q2O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q2O1__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q3O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q3O2__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q4O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q4O4__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q5O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q5O4__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q6O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q6O2__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q7O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q7O1__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q8O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q8O4__c) = &quot;Least&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dominance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icalculation__c</fullName>
        <formula>IF(TEXT(Q1O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q1O4__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q2O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q2O3__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q3O3__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q3O4__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q4O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q4O2__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q5O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q5O3__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q6O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q6O4__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q7O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q7O2__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q8O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q8O3__c) = &quot;Least&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>E-DISCs</relationshipLabel>
        <relationshipName>E_DISCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Profile__c</fullName>
        <label>Primary Profile</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q1O1__c</fullName>
        <label>is soft spoken</label>
        <picklist>
            <picklistValues>
                <fullName>Most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Least</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q1O2__c</fullName>
        <label>speaks loudly</label>
        <picklist>
            <picklistValues>
                <fullName>Most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Least</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q1O3__c</fullName>
        <label>speaks self-assuredly</label>
        <picklist>
            <picklistValues>
                <fullName>Most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Least</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scalculation__c</fullName>
        <formula>IF(TEXT(Q1O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q1O3__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q2O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q2O2__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q3O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q3O1__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q4O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q4O3__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q5O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q5O1__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q6O2__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q6O3__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q7O1__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q7O3__c) = &quot;Least&quot;, 1, 0) + IF(TEXT(Q8O4__c) = &quot;Most&quot;, 1, 0) + IF(TEXT(Q8O2__c) = &quot;Least&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Steadiness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Profile__c</fullName>
        <label>Secondary Profile</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>